fix: Add spacing between number blocks

--- a/sass/components/countdown.scss
+++ b/sass/components/countdown.scss
@@ -26,6 +26,7 @@
 
   &__timer {
     display: flex;
+    gap: 1rem;
     margin-bottom: 2rem;
   }
 
